# scrapper-mf-backend

./: hello.py  pyproject.toml
endpoints/: views.py
restapi/: settings.py  urls.py
